<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:name="hnkntoc.com.seafight2.Activity.fragment.PlayingFieldFragment"
        android:id="@+id/fieldFragment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_field2"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_clear"
                android:id="@+id/clear"
                android:layout_weight="1"
                android:onClick="OnClickClear"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_random"
                android:id="@+id/random"
                android:layout_weight="1"
                android:onClick="OnClickRandom"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_ship1"
                android:id="@+id/newShip1"
                android:onClick="OnClickNewShip"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_ship3"
                android:id="@+id/newShip3"
                android:onClick="OnClickNewShip"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_ship2"
                android:id="@+id/newShip2"
                android:onClick="OnClickNewShip"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_ship4"
                android:id="@+id/newShip4"
                android:onClick="OnClickNewShip"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/vertical"
                android:layout_weight="1.1"
                android:onClick="OnClickStatusChange" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_delete"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:onClick="OnClickDelete" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/planning_next"
                android:id="@+id/next"
                android:layout_weight="1"
                android:onClick="OnClickNext" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>